# Introduction-to-Software-Testing

./: README.md  fault_location.py  generate_embedding.py  requirements.txt
FLAME_project/: .env  clean.py  evaluation.py  fault_location.py  generate_embedding.py  generate_error_message.py  generate_file_line_map.py  generate_ground_truth.py  main.py  requirements.txt
FLAME_project/data/compiler_technology/buggy/1/1436/correct/: CMakeLists.txt
FLAME_project/data/compiler_technology/buggy/1/1436/correct/include/: consts.h
FLAME_project/data/data_structures/problem/2/: description.txt
FLAME_project/data/data_structures/problem/5/: description.txt
FLAME_project/flame_env/: pyvenv.cfg
FLAME_project/util/: openai_util.py  program_runner_ds.py
FLAME_qwen/: .env  README.md  clean.py  encodings.xml  generate_ground_truth.py  main.py  qwen_experiments.py  test1.py
FLAME_qwen/data/compiler_technology/buggy/1/1360/wrong/: CMakeLists.txt
FLAME_qwen/data/compiler_technology/buggy/1/1360/wrong/analysis/: lexer.cpp
FLAME_qwen/data/compiler_technology/buggy/1/1360/wrong/items/: Grammar.h
FLAME_qwen/data/compiler_technology/buggy/1/1360/wrong/items/AST/: node.h
FLAME_qwen/data/compiler_technology/buggy/1/1430/wrong/: CMakeLists.txt  CommentRemover.h  Lexer.cpp  Parser.cpp
FLAME_qwen/data/compiler_technology/buggy/1/1431/wrong/: CMakeLists.txt  all.h  cifa.cpp  main.cpp
FLAME_qwen/data/compiler_technology/problem/0/: description.txt
FLAME_qwen/data/data_structures/problem/4/: description.txt  info.json
FLAME_qwen/data/data_structures/problem/6/: description.txt
FLAME_qwen/data/data_structures/problem/8/: description.txt
FLAME_qwen/util/: config.py  openai_util.py
Flame_original/: .env  evaluation.py  generate_error_message.py  generate_file_line_map.py
Flame_original/data/compiler_technology/problem/1/: description.txt
Flame_original/data/data_structures/problem/1/: description.txt
Flame_original/util/: openai_util.py  program_runner_ct.py
data/compiler_technology/buggy/0/1166/: buggy-qwen3-max-1.txt  buggy-qwen3-max-sc-2.txt  buggy-qwen3-max-sc-5.txt  buggy-qwen3.6-plus-1.txt  vote_results_qwen_single.json
data/compiler_technology/buggy/0/1167/: buggy-claude-sonnet-4-6-1.txt  buggy-qwen3-max-sc-1.txt  buggy-qwen3-max-single.txt  prompt_buggy-qwen3-max-single.txt
data/compiler_technology/buggy/0/1168/: buggy-deepseek-chat-2.txt  buggy-qwen3-max-single.txt  prompt_buggy-qwen3-max-sc-3.txt  vote_results_qwen_self_consistency.json
data/compiler_technology/buggy/0/1169/: buggy-qwen3-max-sc-1.txt  buggy-qwen3-max-sc-3.txt  buggy-qwen3-max-sc-4.txt  buggy-qwen3-max-sc-5.txt  buggy-qwen3-max-single.txt
data/compiler_technology/buggy/0/1170/: buggy-claude-sonnet-4-6-1.txt  buggy-deepseek-reasoner-1.txt  buggy-qwen3-max-sc-1.txt  buggy-qwen3-max-sc-4.txt  vote_results_qwen_self_consistency.json
data/compiler_technology/buggy/0/1171/: buggy-deepseek-reasoner-1.txt  buggy-qwen3-max-sc-5.txt  buggy-qwen3-max-single.txt  buggy-qwen3.6-plus-1.txt  file_line_map.json  vote_results_qwen_single.json
data/compiler_technology/buggy/0/1172/: buggy-qwen3-max-sc-3.txt  buggy-qwen3.6-plus-1.txt  buggy-qwen3.6-plus-2.txt  buggy.txt  vote_results_qwen_single.json
data/compiler_technology/buggy/0/1173/: buggy-deepseek-reasoner-2.txt  buggy-qwen3-max-sc-2.txt  buggy-qwen3-max-sc-4.txt  buggy-qwen3-max-sc-5.txt  buggy-qwen3-max-single.txt  prompt.txt  vote_results_qwen_single.json
data/compiler_technology/buggy/0/1174/: buggy-deepseek-reasoner-2.txt  buggy-qwen3-max-sc-4.txt
data/compiler_technology/buggy/0/1175/: buggy-qwen3-max-sc-4.txt  buggy-qwen3.6-plus-2.txt  vote_results_qwen_self_consistency.json
data/compiler_technology/buggy/0/1176/: buggy-deepseek-chat-2.txt  buggy-deepseek-reasoner-1.txt  buggy-qwen3-max-sc-3.txt  buggy-qwen3-max-sc-5.txt  prompt_buggy-qwen3-max-sc-4.txt  vote_results_qwen_self_consistency.json
data/compiler_technology/buggy/0/1177/: buggy-claude-sonnet-4-6-1.txt  buggy-deepseek-chat-1.txt  buggy-deepseek-reasoner-2.txt  buggy-qwen3-max-sc-1.txt  buggy-qwen3-max-sc-3.txt  buggy-qwen3-max-single.txt  prompt_buggy-qwen3-max-sc-5.txt
data/compiler_technology/buggy/0/1178/: buggy-deepseek-reasoner-2.txt  buggy-qwen3-max-sc-2.txt  file_line_map.json  vote_results_qwen_single.json
data/compiler_technology/buggy/0/1179/: buggy-qwen3-max-sc-1.txt  vote_results.json  (+2 more)
data/compiler_technology/buggy/0/1285/wrong/: CMakeLists.txt
data/compiler_technology/buggy/1/1337/correct/: CMakeLists.txt
data/compiler_technology/buggy/1/1337/correct/lexer/: Lexer.h
data/compiler_technology/buggy/1/1337/correct/parser/compUnit/: CompUnit.cpp
data/compiler_technology/buggy/1/1337/correct/parser/declaration/variable/: VarDecl.cpp
data/compiler_technology/buggy/1/1337/correct/parser/expression/multiexp/: AddExp.cpp
data/compiler_technology/buggy/1/1337/correct/parser/expression/unaryexp/: ConstExp.cpp
data/compiler_technology/buggy/1/1337/correct/parser/statement/: Stmt.h
data/compiler_technology/buggy/1/1337/correct/util/: Constants.h
data/data_structures/problem/0/: description.txt
data/data_structures/problem/3/: description.txt
data/data_structures/problem/7/: description.txt
data/data_structures/problem/9/: description.txt
util/: program_runner_ds.py  prompt_util.py  test1.py
(+97289 files in other folders)
